// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DefaultLayout /> tests feature banner tests Level up banner 1`] = `
<div>
  <div
    class="main"
    data-layout="default"
  >
    <nav
      class="main"
    >
      <ul
        class="navList"
      >
        <li
          class="navItem"
        >
          <a
            class="navLink"
            href="/account/undefined/home"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="harness"
              >
                <svg
                  height="30"
                  viewBox="0 0 25 25"
                  width="30"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
                    fill="#4facdf"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main text StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--padding-bottom-xsmall StyledProps--color StyledProps--color-white"
              >
                <span>
                  common.home
                </span>
              </p>
            </div>
          </a>
        </li>
      </ul>
      <ul
        class="navList"
      >
        <li
          class="navItem"
        >
          <a
            class="navLink settings hoverNavLink"
            href="/account/undefined/settings"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="nav-settings"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 18 18"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254c-.499-.19-.963-.46-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                    fill="#ccc"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                    fill="#ccc"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main hoverText StyledProps--font-size-xsmall StyledProps--font-align-center StyledProps--color StyledProps--color-white"
              >
                <span>
                  common.accountSettings
                </span>
              </p>
            </div>
          </a>
        </li>
        <li
          class="navItem"
        >
          <a
            class="navLink userLink hoverNavLink"
            href="/account/undefined/user"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex"
            >
              <p
                class="StyledProps--font StyledProps--main hiddenText StyledProps--font-size-xsmall StyledProps--font-align-center StyledProps--color StyledProps--color-white"
              >
                <span>
                  common.myProfile
                </span>
              </p>
            </div>
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="main"
    >
      <div />
      <div
        class="StyledProps--font StyledProps--main bottomContainer"
      >
        <div
          class="titleContainer"
        >
          <div
            class="Layout--vertical StyledProps--main"
          />
        </div>
      </div>
    </div>
    <div
      class="rhs"
    >
      <div
        class="featuresBanner levelUp"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-left-large"
          style="min-width: 800px; width: 95%;"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--padding-right-small"
          >
            <p
              class="StyledProps--font StyledProps--main btn StyledProps--color StyledProps--color-orange800 StyledProps--font-variation-form-message-warning StyledProps--font-weight-bold StyledProps--padding-right-medium"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-orange800"
                data-icon="flash"
              >
                <svg
                  height="25"
                  viewBox="0 0 33 28"
                  width="25"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="m3.77344 17.341 17.11126-15.591-2.2963 8.909h8.1832l-17.11128 15.591 2.29628-8.909z"
                    fill="#ff5310"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              common.levelUp
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary10 StyledProps--font-variation-small"
            >
              This is a feature banner
            </p>
          </div>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              common.manageSubscription
            </span>
          </button>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--large"
          data-testid="feature-banner-dismiss"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="children"
      />
    </div>
  </div>
</div>
`;

exports[`<DefaultLayout /> tests feature banner tests Overuse banner 1`] = `
<div>
  <div
    class="main"
    data-layout="default"
  >
    <nav
      class="main"
    >
      <ul
        class="navList"
      >
        <li
          class="navItem"
        >
          <a
            class="navLink"
            href="/account/undefined/home"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="harness"
              >
                <svg
                  height="30"
                  viewBox="0 0 25 25"
                  width="30"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
                    fill="#4facdf"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main text StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--padding-bottom-xsmall StyledProps--color StyledProps--color-white"
              >
                <span>
                  common.home
                </span>
              </p>
            </div>
          </a>
        </li>
      </ul>
      <ul
        class="navList"
      >
        <li
          class="navItem"
        >
          <a
            class="navLink settings hoverNavLink"
            href="/account/undefined/settings"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="nav-settings"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 18 18"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254c-.499-.19-.963-.46-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                    fill="#ccc"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                    fill="#ccc"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main hoverText StyledProps--font-size-xsmall StyledProps--font-align-center StyledProps--color StyledProps--color-white"
              >
                <span>
                  common.accountSettings
                </span>
              </p>
            </div>
          </a>
        </li>
        <li
          class="navItem"
        >
          <a
            class="navLink userLink hoverNavLink"
            href="/account/undefined/user"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex"
            >
              <p
                class="StyledProps--font StyledProps--main hiddenText StyledProps--font-size-xsmall StyledProps--font-align-center StyledProps--color StyledProps--color-white"
              >
                <span>
                  common.myProfile
                </span>
              </p>
            </div>
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="main"
    >
      <div />
      <div
        class="StyledProps--font StyledProps--main bottomContainer"
      >
        <div
          class="titleContainer"
        >
          <div
            class="Layout--vertical StyledProps--main"
          />
        </div>
      </div>
    </div>
    <div
      class="rhs"
    >
      <div
        class="featuresBanner overUse"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-left-large"
          style="min-width: 800px; width: 95%;"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--padding-right-small"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary10 StyledProps--font-variation-form-message-warning StyledProps--font-weight-bold StyledProps--padding-right-medium"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-warning-sign StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-yellow900"
                icon="warning-sign"
              >
                <svg
                  data-icon="warning-sign"
                  height="25"
                  viewBox="0 0 20 20"
                  width="25"
                >
                  <desc>
                    warning-sign
                  </desc>
                  <path
                    d="M19.86 17.52l.01-.01-9-16-.01.01C10.69 1.21 10.37 1 10 1s-.69.21-.86.52l-.01-.01-9 16 .01.01c-.08.14-.14.3-.14.48 0 .55.45 1 1 1h18c.55 0 1-.45 1-1 0-.18-.06-.34-.14-.48zM11 17H9v-2h2v2zm0-3H9V6h2v8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              common.overuse
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary10 StyledProps--font-variation-small"
            >
              This is a feature banner
            </p>
          </div>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              common.manageSubscription
            </span>
          </button>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--large"
          data-testid="feature-banner-dismiss"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="children"
      />
    </div>
  </div>
</div>
`;

exports[`<DefaultLayout /> tests feature banner tests features banner is rendered 1`] = `
<div>
  <div
    class="main"
    data-layout="default"
  >
    <nav
      class="main"
    >
      <ul
        class="navList"
      >
        <li
          class="navItem"
        >
          <a
            class="navLink"
            href="/account/undefined/home"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="harness"
              >
                <svg
                  height="30"
                  viewBox="0 0 25 25"
                  width="30"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
                    fill="#4facdf"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main text StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--padding-bottom-xsmall StyledProps--color StyledProps--color-white"
              >
                <span>
                  common.home
                </span>
              </p>
            </div>
          </a>
        </li>
      </ul>
      <ul
        class="navList"
      >
        <li
          class="navItem"
        >
          <a
            class="navLink settings hoverNavLink"
            href="/account/undefined/settings"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="nav-settings"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 18 18"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254c-.499-.19-.963-.46-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                    fill="#ccc"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                    fill="#ccc"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main hoverText StyledProps--font-size-xsmall StyledProps--font-align-center StyledProps--color StyledProps--color-white"
              >
                <span>
                  common.accountSettings
                </span>
              </p>
            </div>
          </a>
        </li>
        <li
          class="navItem"
        >
          <a
            class="navLink userLink hoverNavLink"
            href="/account/undefined/user"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex"
            >
              <p
                class="StyledProps--font StyledProps--main hiddenText StyledProps--font-size-xsmall StyledProps--font-align-center StyledProps--color StyledProps--color-white"
              >
                <span>
                  common.myProfile
                </span>
              </p>
            </div>
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="main"
    >
      <div />
      <div
        class="StyledProps--font StyledProps--main bottomContainer"
      >
        <div
          class="titleContainer"
        >
          <div
            class="Layout--vertical StyledProps--main"
          />
        </div>
      </div>
    </div>
    <div
      class="rhs"
    >
      <div
        class="featuresBanner info"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-left-large"
          style="min-width: 800px; width: 95%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary10 StyledProps--font-variation-form-message-warning StyledProps--padding-right-small"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main infoIcon StyledProps--padding-right-medium"
              data-icon="info-message"
            >
              <svg
                fill="none"
                height="25"
                viewBox="0 0 24 24"
                width="25"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M12 21.494c-5.385 0-9.75-4.365-9.75-9.75s4.365-9.75 9.75-9.75 9.75 4.365 9.75 9.75a9.704 9.704 0 0 1-1.55 5.276l1.484 3.44a.75.75 0 0 1-.985.986l-3.447-1.486A9.704 9.704 0 0 1 12 21.494ZM10.876 7.62a1.125 1.125 0 1 0 2.25 0 1.125 1.125 0 0 0-2.25 0ZM12 10.225a.75.75 0 0 0-.75.75v4.502a.75.75 0 0 0 1.5 0v-4.502a.75.75 0 0 0-.75-.75Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            This is a feature banner
          </p>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              common.manageSubscription
            </span>
          </button>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon Button--size Button--large"
          data-testid="feature-banner-dismiss"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="children"
      />
    </div>
  </div>
</div>
`;
